# DevanagariMNIST

./: Makefile  README.md  pyproject.toml
devanagari_mnist/: Project_Notebook.ipynb  Untitled.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
