[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "devanagari_mnist"
version = "0.0.1"
description = "Using CNN based architectures for Handwritten OCR in Devanagari script"
authors = [
  { name = "Pranav Dimri" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["devanagari_mnist"]
force_sort_within_sections = true
